App/Styling/css/superphy.css
/*
 
 File: superphy.less
 Desc: Main Superphy stylesheet. Secondary style sheets
   should be imported in this sheet.
 Author: Matt Whiteside matthew.whiteside@phac-aspc.gc.ca
 Date: March 27th, 2013
 
 * */
/*
 
 File: superphy_tree.less
 Desc: Stylesheet for TreeView.
 Author: Matt Whiteside matthew.whiteside@phac-aspc.gc.ca
 Date: March 27th, 2013
 
 * */
/** Operations ****************************/
.tree_operations {
  margin-left: 30px;
  margin-right: 30px;
  margin-bottom: 0;
  width: 700px;
  padding-top: 40px;
  padding-bottom: 0;
}
.tree_operations a {
  float: right;
  font-size: 90%;
}
.tree_operations button {
  margin-left: 5px;
}
/** Top Div *******************************/
.genomeTreeDivs {
  margin-left: 30px;
  margin-right: 30px;
}
.genomeTreeDivs svg {
  display: block;
  margin: auto;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}
.genome_tree_item {
  margin-left: 30px;
  margin-right: 30px;
  height: 800px;
  width: 700px;
  margin-top: 15px;
  margin-bottom: 0px;
  border-style: solid;
  border-width: 1px;
  border-color: #d3d3d3;
}
.genome_tree_item svg {
  display: block;
  margin: auto;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}
.genome_tree_legend {
  margin-left: 30px;
  margin-right: 30px;
  height: 100px;
  width: 700px;
  margin-top: 5px;
  margin-bottom: 30px;
}
.genome_tree_legend svg {
  display: block;
  margin: auto;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}
/** Text **********************************/
/** Nodes *********************************/
.treenode .treeicon {
  font-family: FontAwesome;
  font-size: 12px;
}
.treenode .treelabel {
  font: 12px sans-serif;
}
.treenode .slash {
  font: italic normal 12px sans-serif;
  fill: #737373;
}
.treenode circle {
  fill: #ffffff;
  stroke: #4682b4;
  stroke-width: 1.5px;
}
.treenode rect.selectClade {
  fill: #ffffff;
  stroke: #ff0000;
  stroke-width: 1.5px;
}
.selectedNode .treelabel {
  color: grey;
}
.focusNode .treelabel {
  font: italic normal 12px sans-serif;
}
.focusNode circle {
  fill: #ffc966;
  stroke: #ffa500;
  stroke-width: 3px;
}
.internalSNodePart rect.selectClade {
  fill: #939393;
}
.internalSNodeFull rect.selectClade {
  fill: #3f3f3f;
}
.groupedNode10 .treelabel {
  font: italic normal 12px sans-serif;
}
.groupedNode10 circle {
  fill: #dadb37;
  stroke: #91921a;
  stroke-width: 3px;
}
.groupedNode9 .treelabel {
  font: italic normal 12px sans-serif;
}
.groupedNode9 circle {
  fill: #31d7e8;
  stroke: #1294a1;
  stroke-width: 3px;
}
.groupedNode8 .treelabel {
  font: italic normal 12px sans-serif;
}
.groupedNode8 circle {
  fill: #999999;
  stroke: #666666;
  stroke-width: 3px;
}
.groupedNode7 .treelabel {
  font: italic normal 12px sans-serif;
}
.groupedNode7 circle {
  fill: #aa6d60;
  stroke: #6b4239;
  stroke-width: 3px;
}
.groupedNode6 .treelabel {
  font: italic normal 12px sans-serif;
}
.groupedNode6 circle {
  fill: #eca1d5;
  stroke: #da4daf;
  stroke-width: 3px;
}
.groupedNode5 .treelabel {
  font: italic normal 12px sans-serif;
}
.groupedNode5 circle {
  fill: #ad8bcc;
  stroke: #7b49a8;
  stroke-width: 3px;
}
.groupedNode4 .treelabel {
  font: italic normal 12px sans-serif;
}
.groupedNode4 circle {
  fill: #df5152;
  stroke: #ab1f20;
  stroke-width: 3px;
}
.groupedNode3 .treelabel {
  font: italic normal 12px sans-serif;
}
.groupedNode3 circle {
  fill: #37c837;
  stroke: #217821;
  stroke-width: 3px;
}
.groupedNode2 .treelabel {
  font: italic normal 12px sans-serif;
}
.groupedNode2 circle {
  fill: #ff9a41;
  stroke: #da6600;
  stroke-width: 3px;
}
.groupedNode1 .treelabel {
  font: italic normal 12px sans-serif;
}
.groupedNode1 circle {
  fill: #2b93db;
  stroke: #185a88;
  stroke-width: 3px;
}
/** Links *********************************/
.treelink {
  fill: none;
  stroke: #ccc;
  stroke-width: 1.5px;
}
/** Scale Bar *****************************/
g.scalebar line {
  fill: none;
  stroke: #ccc;
  stroke-width: 1.5px;
}
g.scalebar text {
  font: 8pt sans-serif;
  fill: #ccc;
}
/** Dialog ********************************/
.noTitleStuff .ui-dialog-titlebar {
  display: none;
}
/** Legend ********************************/
.legendlabel2 {
  font: 12px sans-serif;
  fill: #696969;
}
.legendlabel1 {
  font: 12px sans-serif;
}
/*
 
 File: superphy_msa.less
 Desc: Stylesheet for MsaView.
 Author: Matt Whiteside matthew.whiteside@phac-aspc.gc.ca
 Date: April 15th, 2013
 
 * */
.superphy-msa {
  padding: 20px;
}
/** Row names *****************************/
td.msa_row_name {
  padding-right: 10px;
  text-align: right;
}
/** Info message **************************/
.msa-info td {
  padding: 5px 10px 0 40px;
  text-align: center;
}
/** Nucleotides ***************************/
.nucText {
  font-family: "Lucida Console", Monaco, monospace;
  text-align: center;
  text-valign: center;
  color: black;
  font-size: 10pt;
}
td.nuclA {
  font-family: "Lucida Console", Monaco, monospace;
  text-align: center;
  text-valign: center;
  color: black;
  font-size: 10pt;
  background-color: #F5A9A9;
}
td.nuclT {
  font-family: "Lucida Console", Monaco, monospace;
  text-align: center;
  text-valign: center;
  color: black;
  font-size: 10pt;
  background-color: #A9D0F5;
}
td.nuclG {
  font-family: "Lucida Console", Monaco, monospace;
  text-align: center;
  text-valign: center;
  color: black;
  font-size: 10pt;
  background-color: #F3F781;
}
td.nuclC {
  font-family: "Lucida Console", Monaco, monospace;
  text-align: center;
  text-valign: center;
  color: black;
  font-size: 10pt;
  background-color: #A9F5A9;
}
td.nuclGap {
  font-family: "Lucida Console", Monaco, monospace;
  text-align: center;
  text-valign: center;
  color: black;
  font-size: 10pt;
  background-color: #F2F2F2;
}
td.consM,
td.consMM {
  font-family: "Lucida Console", Monaco, monospace;
  text-align: center;
  text-valign: center;
  color: black;
  font-size: 10pt;
  font-color: #A4A4A4;
}
td.msaPosition {
  text-align: right;
  text-valign: top;
  padding-bottom: 24px;
}
/* ... */

